Fixing spacing for category, department and client

--- a/src/views/Categories/Read/Category.css
+++ b/src/views/Categories/Read/Category.css
@@ -1,5 +1,5 @@
 .category-page {
-  padding: 2%;
+  padding: 2% 2% 2% 4%;
   background-color: #fafafb;
   min-height: 100vh;
   font-family: "Cairo", "Helvetica", "Arial", sans-serif;
