--- a/src/views/Clients/Read/clients.css
+++ b/src/views/Clients/Read/clients.css
@@ -20,7 +20,7 @@
 
 @media (max-width:600px) {
   .all-clients{
-    padding-bottom: 110px;
+    padding-bottom: 42px;
   }
 }
 
